# clickhouse-example

./: compose.yml  generate_data_clickhouse.py  generate_data_postgres.py  manage.py  pyproject.toml
clickhouse_example/: asgi.py  dbrouters.py  settings.py  urls.py  wsgi.py
clickhouse_example/apps/clickhouse/: apps.py  models.py
clickhouse_example/apps/clickhouse/migrations/: 0001_initial.py
clickhouse_example/apps/example/: apps.py  models.py
clickhouse_example/apps/example/migrations/: 0001_initial.py
