[tool.poetry]
name = "clickhouse-example"
version = "0.1.0"
description = ""
authors = ["npavlin <np@letsnova.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
psycopg = {extras = ["binary"], version = "^3.2.9"}
django-clickhouse-backend = "^1.4"
bleak = "^1.1.0"
rich = "^14.1.0"
plotext = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
